--- a/spark-apps/pom.xml
+++ b/spark-apps/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.raghu.spark</groupId>
-    <artifactId>spark-sample</artifactId>
+    <artifactId>spark-apps</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -18,6 +18,10 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
+            <version>2.4.4</version>
+        </dependency><dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.11</artifactId>
             <version>2.4.4</version>
         </dependency>
     </dependencies>
